[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "antibiotic-stewardship-env"
version = "1.0.0"
description = "OpenEnv-compliant antibiotic stewardship RL environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "openai>=1.30.0",
    "requests>=2.31.0",
]
